--- a/client/views/layouts/base.html
+++ b/client/views/layouts/base.html
@@ -1,5 +1,18 @@
 <template name="layout">
-	<header>I am a header</header>
-	<div id="content">{{> yield}}</div>
-	<footer>I am a footer</footer>
+	<div class="container">
+		<div class="header">
+			<ul class="nav nav-pills pull-right">
+				<li class="active"><a href="#">Home</a></li>
+				<li><a href="#">About</a></li>
+				<li><a href="#">Contact</a></li>
+			</ul>
+			<h3 class="text-muted">Project name</h3>
+		</div>
+		
+		{{> yield}}
+
+		<div class="footer">
+			<p>&copy; Pebble 2014</p>
+		</div>
+	</div>
 </template>
